@@ -39,3 +39,4 @@
 ( cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/fancy_viewer.c;  ) > 0.9.9cvs4.patchset
 ( cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/fancy_viewer.c;  ) > 0.9.9cvs5.patchset
 ( cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/fancy_viewer.c;  ) > 0.9.9cvs6.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/fancy_prefs.h;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/fancy_prefs.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/fancy_viewer.h;  cvs diff -u -r 1.1.2.30 -r 1.1.2.31 src/fancy_viewer.c;  ) > 0.9.9cvs7.patchset
